feat: add FFM native density integration